--- a/Date-Countdown/index.html
+++ b/Date-Countdown/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown</title>
+    <title>Date Countdown</title>
     <!--CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
@@ -19,7 +19,7 @@
             <span id="month" style="margin-right:5px">04</span>
             <span id="year" style="margin-right:5px">2022</span>
         </div>
-        <div id="countdown">
+        <div style="display:flex;justify-content:center; margin-top:20px;">
             <div id="text"><b><span id="days">X</span></b> <br> DAYS</div>
             <div id="text"><b><span id="hours">0</span></b> <br> HOURS</div>
             <div id="text"><b><span id="mins">0</span></b> <br> MINS</div>
